text align fixed

--- a/src/assets/CSS/Login.css
+++ b/src/assets/CSS/Login.css
@@ -30,6 +30,7 @@
   padding: 15px 20px;
   background-color: teal;
   color: white;
+  text-align: center;
 }
 
 .login-form button :disabled {
