--- a/src/assets/CSS/Register.css
+++ b/src/assets/CSS/Register.css
@@ -50,6 +50,7 @@
   padding: 15px 20px;
   background-color: teal;
   color: white;
+  text-align: center;
 }
 /* ==== Media Query Starts ==== */
 @media screen and (max-width: 820px) {
